--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h1 {
 
 .side-bar,
 .canvas {
+  height: 800px;
   flex-shrink: 0;
   border: lightslategray solid 2px;
   display: flex;
@@ -37,7 +38,6 @@ h1 {
 
 .side-bar {
   width: 240px;
-  height: 480px;
   border-radius: 8px;
   align-items: center;
 }
@@ -48,6 +48,7 @@ h1 {
   align-items: center;
   justify-content: center;
   gap: 32px;
+  margin: auto;
 }
 
 .side-bar button {
@@ -71,7 +72,6 @@ h1 {
 
 .canvas {
   width: 1000px;
-  height: 800px;
   padding: 0;
   gap: 0;
 }
